[package]
name = "alkanes-forge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "alkanes/*",
    ".",
    "crates/*"]

[dependencies]
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs",tag = "v0.2.3"}
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs",tag = "v0.2.3"}
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = "1.0.98"

[build-dependencies]
anyhow = "1.0.98"
flate2 = "1.1.2"
hex = "0.4.3"
