[package]
name = "forge_stake"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs",tag = "v0.3.0"}
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs",tag = "v0.3.0"}
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
anyhow = "1.0.98"
thiserror = "2.0.12"
types-support = { path = "../types-support" }
rust_decimal = "1.37.2"
serde_json = "1.0.140"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", tag = "v0.3.0", features = ["test-utils"] }

[build-dependencies]
anyhow = "1.0.90"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }