[package]
name = "staking_pool"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs",tag = "v0.3.0"}
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs",tag = "v0.3.0"}
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = "1.0.98"
bitcoin = { version = "0.32.4", features = ["rand"] }
types-support = { path = "../../crates/types-support" }
rust_decimal = "1.37.2"
serde_json = "1.0.140"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", tag = "v0.3.0", features = ["test-utils"] }
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", tag = "v0.3.0", features = [
    "test-utils",
] }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = [
    "test-utils",
] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", tag = "v0.3.0", features = [
    "test-utils",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }